--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,20 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "api", "parking", "melbourne"],
+  "keywords": [
+    "express",
+    "api",
+    "parking",
+    "melbourne"
+  ],
   "author": "",
   "license": "ISC",
   "description": "Backend API for Melbourne Parking System",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
